--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy
-pandas
-seaborn
-matplotlib
-scipy
-scikit-learn
-tensorflow
-keras
+numpy==1.24.3
+pandas==1.5.3
+seaborn==0.12.2
+matplotlib==3.7.1
+scipy==1.10.1
+scikit-learn==1.3.2
+tensorflow==2.13.0
+xgboost==2.1.2
+bayesian-optimization==1.4.2
